<resources>
    <string name="app_name" translatable="false">RandSode</string>
    <string name="search_hint">Type a serie name</string>
    <string name="title_activity_serie">Showing serie</string>
    <string name="search_activity_title_caption">Search for :</string>
    <string name="main_title_my_series">My series</string>
    <string name="main_title_popular">Popular</string>
    <string name="no_data">No series found</string>
    <string name="seasons">seasons</string>
    <string name="episodes">episodes</string>
    <string name="give_random">Give me a random episode !</string>
    <string name="favorite">Set as favorite</string>
    <string name="favorite_delete">Delete of favorite</string>
    <string name="no_favorite">You don\'t have any serie</string>
    <string name="no_episode">You don\'t have any episode watched</string>
    <string name="dialog_title_episode">Watch this episode?</string>
    <string name="delete_question">Are you sure to delete?</string>
    <string name="delete_question_title">Delete a serie?</string>
    <string name="button_undo">Undo</string>
    <string name="episode_delete">Episode is deleted</string>
    <string name="episode_restored">Episode is restored!</string>
    <string name="serie_deleted">Serie deleted from favorite</string>
    <string name="dialog_cancel_delete">Cancel</string>
    <string name="dialog_ok_delete">Delete</string>
    <string name="serie_added">Serie added to favorite</string>
    <string name="error_random">Error in the randomizer !</string>
    <string name="no_informations_serie">Not enough information about this series. Unable to do something with !</string>
    <string name="title_activity_login">Sign in to MovieDB website</string>
    <string name="connection_success">Connection successful!</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field">Field may be incorrect</string>
    <string name="connection_menu">My connection to MovieDB</string>
    <string name="synchro_auto_menu">Auto synchronize</string>
    <string name="synchro_menu">Synchronize now</string>
    <string name="sychro_executed">Synchronization executed !</string>
    <string name="synchro_auto_pref">synchro_auto_pref</string>
    <string name="password_pref">password_pref</string>
    <string name="username_pref">username_pref</string>
    <string name="sychro_executed_error">Synchronize error ! Please check network and account</string>
    <string name="sessionid_pref">sessionid_pref</string>
    <string name="prefs_name">preferences_synchro</string>
    <string name="synchro_dialog_title">Choose how to synchronize</string>
    <string name="logout">Log out</string>
    <string name="disconnected">You are disconnected</string>
    <string name="connected_as">Connected as</string>
    <string name="synchro_running">Synchronization is running ...</string>
</resources>
