<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_connexion_menu"
        android:title="@string/connection_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_synchro_menu"
        android:title="@string/synchro_menu"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_auto_synchro_menu"
        android:checkable="true"
        android:title="@string/synchro_auto_menu"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_search_menu"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_hint"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>